@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<flow xmlns="http://www.springframework.org/schema/webflow"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.springframework.org/schema/webflow
+                          http://www.springframework.org/schema/webflow/spring-webflow-1.0.xsd">
+
+  <var name="flowAction" scope="flow" class="org.springframework.webflow.engine.impl.FooFlowAction" />
+
+  <start-state idref="action1" />
+
+  <action-state id="action1">
+    <evaluate-action expression="flowScope.flowAction.action1()" />
+    <transition on-exception="org.springframework.webflow.engine.impl.FooException" to="fooException" />
+    <transition on-exception="ognl.MethodFailedException" to="methodFailedException" />
+  </action-state>
+
+  <end-state id="fooException" view="showFooException" />
+
+  <end-state id="methodFailedException" view="showMethodFailedException" />
+ 
+</flow>
